device protocol alignment, ipad thick grey line issue on popup

--- a/app/styles/_custom-navbar.scss
+++ b/app/styles/_custom-navbar.scss
@@ -419,6 +419,9 @@ ul.logout-dropdown>li{
 .custom_arrow > span > select{
 	position: relative;
 }
+.text-right{
+	text-align:right!important;
+}
 .highcharts-tooltip {
   pointer-events: none !important;
   }
